get audioList and ID from server. server sends Random Audio list.

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script>
+        var recievedAudioList = <%- JSON.stringify(audioList)%>;
+        var recievedID = <%- JSON.stringify(id)%>;
+    </script>
     <script type="text/javascript" src="javascripts/randomPlayer.js"></script>
     <title>Agarrame el temita</title>
 </head>
